opciones new y show disponibles para Articulo, incluye manejo de mensajes de error

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
+  <% flash.each do |name, msg|%>
+    <lu>
+      <li><%= msg %></li>
+    </lu>
+  <% end %>
+  <%= yield %>
 
 </body>
 </html>
