--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,12 @@
 <h1>Crear Nuevo Articulo</h1>
-
+<% if @article.errors.any? %>
+  <h3>Corrija los siguientes errores:</h3>
+  <ul>
+  <% @article.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+  <% end %>
+  </ul>
+<% end %>
 <%= form_for @article  do |f| %>
   <p>
     <%= f.label :title  %><br/>
