--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -15,6 +15,7 @@
     <td><%= art.description %></td>
     <td><%= link_to "Show", article_path(art) %></td>
     <td><%= link_to "Edit", edit_article_path(art) %></td>
+    <td><%= link_to "Del", article_path(art), method: :delete,  data: { confirm: "Estas seguro?" } %></td>
   </tr>
   <% end %>
 </table>
