--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <% flash.each do |name, msg|%>
-    <lu>
-      <li><%= msg %></li>
-    </lu>
-  <% end %>
+  <%= render 'layouts/messages' %>
   <%= yield %>
 
 </body>
