eliminadas imagenes del home y about

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
 <h1>Home Alpha Blog!</h1>
 
-<%= image_tag 'cars-8.jpg'%>
+
 <br/>
-<%= link_to 'go About us' , about_path%>
+<%= link_to 'Alpha Blog', articles_path %> | 
+<%= link_to 'go About us' , about_path %>
