--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,5 @@
-<h1>Home Alpha Blog!</h1>
+<div class="center jumbotron">
+  <h1>Alpha Blog</h1>  
+  <%= link_to 'Sign up now', "#", class: "btn btn-primary btn-lg btn-xlarge" %> 
+</div>
 
-
-<br/>
-<%= link_to 'Alpha Blog', articles_path %> | 
-<%= link_to 'go About us' , about_path %>
