--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,11 +1,4 @@
-<% if @article.errors.any? %>
-  <h3>Corrija los siguientes errores:</h3>
-  <ul>
-  <% @article.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-  <% end %>
-  </ul>
-<% end %>
+<%= render 'shared/errors', obj: @article%>
 <div class="row">
   <div class="col-xs-12">
     <%= form_for(@article, :html => {class: "form-horizontal", role: "form"})   do |f| %>
@@ -37,6 +30,6 @@
 </div>
 
 <div class="col-xs-4 col-xs-offset-4">
-  [ <%= link_to "Cancel request and back to list", articles_path%> ]
+  [ <%= link_to "Cancel request and back to list", articles_path%> ] 
 </div>
   
