--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,11 +1,17 @@
-<h1>Info de Articulo</h1>
-<p>
-  Titulo: <%= @article.title %>
-</p>
-<p>
-  Descripción: <%= @article.description %>
-</p>
-<p>
-  <%= link_to "Edit this article", edit_article_path(@article) %> | 
-  <%= link_to "back to list", articles_path%>
-</p>
+<h2 align="center">Titulo: <%= @article.title %></h2>
+<div class="well col-xs-8 col-xs-offset-2">
+	<h4 class="center description"><strong>Description:</strong></h4>
+	<hr>
+	<%= simple_format(@article.description) %>
+	<div class="article-actions">
+		<%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %> | 
+		<%= link_to "Delete this article", article_path(@article), 
+																			method: :delete, 
+																			data: {confirm: "Are you sure you want to delete ths article?" }, 
+																			 class: "btn btn-xs btn-danger" %>
+	  <%= link_to "Back to list", articles_path, class: "btn btn-xs btn-success"%>
+	</div>
+	
+</div>
+
+
