--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,21 +1,23 @@
-<h1>Lista de Articulos</h1>
-<p>
-<%= link_to 'New Article' , new_article_path %>
-</p>
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Description</th>
-    <th span='2'></th>
-  </tr>
-  <% @articles.each do |art| %>
-  <tr>
-    <td><%= art.title %></td>
-  
-    <td><%= art.description %></td>
-    <td><%= link_to "Show", article_path(art) %></td>
-    <td><%= link_to "Edit", edit_article_path(art) %></td>
-    <td><%= link_to "Del", article_path(art), method: :delete,  data: { confirm: "Estas seguro?" } %></td>
-  </tr>
+ <h1 align="center">Lista de Articulos</h1>
+ <% @articles.each do |art| %>
+<div class="row">
+  <div class="col-xs-8 col-xs-offset-2">
+    <div class="well well-lg">
+      <div class="article-title">
+        <%= link_to art.title, article_path(art) %>
+      </div>
+      <div class="article-body">
+        <%= truncate(art.description, lenght: 100) %> 
+      </div>
+      <div class="article-actions">
+        <%= link_to "Edit this article", edit_article_path(art), class: "btn btn-xs btn-primary" %> | 
+        <%= link_to "Delete this article", article_path(art), 
+                                      method: :delete, 
+                                      data: {confirm: "Are you sure you want to delete ths article?" }, 
+                                       class: "btn btn-xs btn-danger" %>
+      </div>
+    </div>
+  </div>
+</div>
+
   <% end %>
-</table>
