--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -13,7 +13,7 @@
         <%= link_to "Edit this article", edit_article_path(art), class: "btn btn-xs btn-primary" %> | 
         <%= link_to "Delete this article", article_path(art), 
                                       method: :delete, 
-                                      data: {confirm: "Are you sure you want to delete ths article?" }, 
+                                      data: {confirm: "Are you sure you want to delete this article?" }, 
                                        class: "btn btn-xs btn-danger" %>
       </div>
     </div>
