--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,4 +1,4 @@
-<% articles.each do |art| %>
+<% @articles.each do |art| %>
 <div class="row">
   <div class="col-xs-8 col-xs-offset-2">
     <div class="well well-lg">
