--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,21 +1,25 @@
 <h2 align="center">Titulo: <%= @article.title %></h2>
 <div class="well col-xs-8 col-xs-offset-2">
-	<ul class="listing">
-		<div class="row center">
-			<div class="col-md-4 col-md-offset-4">
-				<li>Created by:</li>
-				<li><%= link_to (gravatar_for(@article.user), user_path(@article.user)) if @article.user %></li>
-				<li class="article-title">
-					<%=link_to (@article.user.username, user_path(@article.user) ) if @article.user %>
-				</li>
-				<li>
-					<small>
-						<%= pluralize(@article.user.articles.count, "article") if @article.user.articles%>
-						</small>
-				</li>
-			</div>
-		</div>
-	</ul>
+	<% if @article.user 
+				myUser = @article.user 
+	%> 
+				<ul class="listing">
+					<div class="row center">
+						<div class="col-md-4 col-md-offset-4">
+							<li>Created by:</li>
+							<li><%= link_to gravatar_for(myUser), user_path(myUser)  %></li>
+							<li class="article-title">
+								<%=link_to myUser.username, user_path(myUser)   %>
+							</li>
+							<li>
+								<small>
+									<%= pluralize(myUser.articles.count, "article") if myUser.articles%>
+									</small>
+							</li>
+						</div>
+					</div>
+				</ul>
+	<% end %>
 	<h4 class="center description"><strong>Description:</strong></h4>
 	<hr>
 	<%= simple_format(@article.description) %>
