--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -16,6 +16,7 @@
         </div>
         
       </div>
+      <% if logged_in? && current_user == art.user %>
       <div class="article-actions">
         <%= link_to "Edit this article", edit_article_path(art), class: "btn btn-xs btn-primary" %> | 
         <%= link_to "Delete this article", article_path(art), 
@@ -23,6 +24,7 @@
                                       data: {confirm: "Are you sure you want to delete this article?" }, 
                                        class: "btn btn-xs btn-danger" %>
       </div>
+      <% end %>
     </div>
   </div>
 </div>
