--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,6 +11,12 @@
 				</li>
 				<li>
 					<small><%= pluralize(usr.articles.count, "article") if usr.articles%></small>
+					<% if logged_in? and current_user.admin? %>
+						<li>
+							<%= link_to "Delete this user", user_path(usr), method: :delete,
+												data: {confirm: "Are you sure you want to delete the user and all their articles?"} %>
+						</li>
+					<% end %>
 				</li>
 			</div>
 		</div>
