--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,22 +17,32 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><%= link_to "Articles", articles_path %></li>
-        <li><%= link_to "Users", users_path %></li>
-        <% if logged_in? %>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Articles<span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Create Article", new_article_path %></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
+              <li><%= link_to "All Articles", articles_path %></li>
+              <% if logged_in? %>
+                <li><%= link_to "Create Article", new_article_path %></li>
+              <% end %>
+              
             </ul>
           </li>
-        <% end %>
+        <li><%= link_to "Users", users_path %></li>
+        
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "All Categories", categories_path %></li>
+              <% Category.all.each do |cat| %>
+                <li><%=link_to "#{cat.name}", category_path(cat) %></li>
+              <% end %>
+              <% if logged_in? && current_user.admin? %>
+                <li role="separator" class="divider"></li>
+                <li><%= link_to "Create Category", new_category_path %></li>
+              <% end %>
+              
+            </ul>
+          </li>
       </ul>
       <form class="navbar-form navbar-left">
         <div class="form-group">
