--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -16,6 +16,9 @@
         </div>
         
       </div>
+      <% if art.categories.any? %>
+        <p>Categories: <%= render art.categories %></p>
+      <% end %>
       <% if logged_in? && (current_user == art.user  || current_user.admin?) %>
       <div class="article-actions">
         <%= link_to "Edit this article", edit_article_path(art), class: "btn btn-xs btn-primary" %> | 
